--- a/index.html
+++ b/index.html
@@ -2,31 +2,66 @@
 <html>
 
 <head>
+  
 </head>
-
+<meta  charset="utf-8">
+<title>Bluetooth</title>
+<link rel="stylesheet" href="styles.css">
 <body>
-  <div>
-    Bluetooth
+  <div id="content">
 
-    A Bluetooth (ejtsd: blútúsz, IPA: [blu:tu:?]) rövid hatótávolságú, adatcseréhez használt, nyílt, vezetéknélküli szabvány. Alkalmazásával számítógépek, mobiltelefonok (telefonkihangosítók) és egyéb készülékek között automatikusan létesíthetünk kis hatótávolságú rádiós kapcsolatot.
+<h1><a href="https://hu.wikipedia.org/wiki/Bluetooth" target="_blank">Bluetooth</a></h1>
 
-    Név eredete (kék fog)
+    <div class="frame">
+      <img src="BluetoothLogo.svg" alt="A bluetooth logója" title="A bluetooth logója">
+      <p class="imgtitle">A bluetooth logója
+      </p>
+    </div><p>A <span>Bluetooth</span> (ejtsd: blútúsz, IPA: [blu:tu:?]) rövid hatótávolságú, adatcseréhez használt, nyílt, vezetéknélküli szabvány. Alkalmazásával számítógépek, mobiltelefonok (telefonkihangosítók) és egyéb készülékek között automatikusan létesíthetünk kis hatótávolságú rádiós kapcsolatot.</p>
+    
+      <h2>Név eredete (kék fog)</h2>
 
-    A név Harald Blatand (I. Harald dán király) dán király nevének angol változata, aki 958-tól, illetve 976-tól 986-ig volt Dánia és Norvégia uralkodója, és nagyon szerette az áfonyát, ezért kék lett a foga. Harald arról volt nevezetes, hogy egyesítette a lázongó dán, norvég és svéd törzseket. Ehhez hasonlóan a Bluetooth-t is arra szánták, hogy egyesítsen és összekössön olyan különböző eszközöket, mint a számítógép, a mobiltelefon, vagy a fejhallgató. A Bluetooth logója a H és B betűknek megfelelő skandináv rúnákat, a <i>Haglazt</i> és a <i>Berkanant</i> idézi.
+    <p>
+      A név Harald Blatand (I. Harald dán király) dán király nevének angol változata, aki 958-tól, illetve 976-tól 986-ig volt Dánia és Norvégia uralkodója, és nagyon szerette az áfonyát, ezért kék lett a foga. Harald arról volt nevezetes, hogy egyesítette a lázongó dán, norvég és svéd törzseket. Ehhez hasonlóan a <span>Bluetooth</span>-t is arra szánták, hogy egyesítsen és összekössön olyan különböző eszközöket, mint a számítógép, a mobiltelefon, vagy a fejhallgató. A <span>Bluetooth</span> logója a H és B betűknek megfelelő skandináv rúnákat, a <i>Haglazt</i> és a <i>Berkanant</i> idézi.</p>
 
-    Alkalmazása
+    <h2>Alkalmazása</h2>
 
-    Vezetéknélküli hálózatok kialakítására asztali és hordozható számítógépek között, illetve csak asztali gépek között kis területen, ha nincs szükség sávszélességre
-    Számítógép-perifériák csatlakoztatására nyomtatók, billentyűzetek, egerek esetében
-    Fájlok és adatok átvitelére és szinkronizálására személyi digitális asszisztensek (PDA-k, mobiltelefonok és a számítógép) között
-    Egyes digitális zenelejátszók, fényképezőgépek és számítógép között
-    Autóskészletek és fülhallgatók csatlakoztatására mobiltelefonokhoz
-    Orvosi és GPS-készülékek
+    <li>Vezetéknélküli hálózatok kialakítására asztali és hordozható számítógépek között, illetve csak asztali gépek között kis területen, ha nincs szükség sávszélességre</li>
+    <li>Számítógép-perifériák csatlakoztatására nyomtatók, billentyűzetek, egerek esetében</li>
+    <li>    Fájlok és adatok átvitelére és szinkronizálására személyi digitális asszisztensek (PDA-k, mobiltelefonok és a számítógép) között</li>
+    <li> Egyes digitális zenelejátszók, fényképezőgépek és számítógép között</li>
+    <li>  Autóskészletek és fülhallgatók csatlakoztatására mobiltelefonokhoz</li>
+    <li> Orvosi és GPS-készülékek</li>
 
-    Hatótávolsága
+   
 
-    A Bluetooth alacsony energiafogyasztása miatt különösen alkalmas hordozható eszközök számára. A készülékek osztályuktól függően az alábbi távolságon belül képesek kommunikálni:
+    <h2>Hatótávolsága</h2>
 
+    <p>A <span>Bluetooth</span> alacsony energiafogyasztása miatt különösen alkalmas hordozható eszközök számára. A készülékek osztályuktól függően az alábbi távolságon belül képesek kommunikálni:</p>
+
+  
+
+  <table id="myTable">
+    <tr>
+      <th>Osztály</th>
+      <th>Teljesítmény</th>
+      <th>Hatótáv</th>
+    </tr>
+    <tr>
+      <td>1</td>
+      <td>100mW (20dBm)</td>
+      <td>100 méter</td>
+    </tr>
+    <tr>
+      <td>2</td>
+      <td>2.5mW (4dBm)</td>
+      <td>10 méter</td>
+    </tr>
+    <tr>
+      <td>3</td>
+      <td>1mW (0dBm)</td>
+      <td>1 méter</td>
+    </tr>
+  </table>
   </div>
 </body>
 
